# codevault

./: .gitignore
Dwarfs/0_Misc/param_call/: param_call.cpp
Dwarfs/0_Misc/random_pattern/: CMakeLists.txt  random.cpp
Dwarfs/10_CFD/diffusion/: Makefile  timer.h
Dwarfs/10_CFD/weno1d/: Makefile  solver1d.cpp
Dwarfs/1_STL/: CMakeLists.txt  weld_vtx.cpp
Dwarfs/20_Thrust/: jacobi.cu  matrix.cu  test_example.cu  trove
Dwarfs/30_DNN/: Makefile  backprop_simple.cpp  example.cpp  parse_arguments.h
Dwarfs/4_Nbody/: CMakeLists.txt  common.cmake
Dwarfs/4_Nbody/bhtree/: CMakeLists.txt
Dwarfs/4_Nbody/bhtree/doc/: bhtree.rst
Dwarfs/4_Nbody/bhtree/src/: Multipole.h  bhtree.cpp  bhtree_mod.cpp  octree.h
Dwarfs/4_Nbody/cmake/Modules/: FindCommon.cmake  FindICPC.cmake  FindIntelCompilers.cmake
Dwarfs/4_Nbody/cmake/Modules/Languages/: CMakeICPCCompiler.cmake.in  CMakeICPCInformation.cmake  CMakeTestICPCCompiler.cmake
Dwarfs/4_Nbody/fortran_detection_area/: CMakeLists.txt
Dwarfs/4_Nbody/hermite4/: CMakeLists.txt  hermite4_omp.cpp  hermite4_serial.cpp  openmp.cpp  openmp.f90  parse_arguments.h  plummer.h  safe_printf.h  serial.cpp  vector3.h
Dwarfs/4_Nbody/hermite4/doc/: hermite4.rst
Dwarfs/4_Nbody/hermite4/ispc/: hermite4.cpp  hermite4.ispc  omp_tasksys.cpp  typeReal.h
Dwarfs/4_Nbody/include/: CodeVaultConfig.h.in
Patterns/: CMakeLists.txt  copy-and-swap.cpp  factory.cpp  multiple_factories.cpp  singleton.cpp  type_erasure.cpp  type_erasure_with_type_index.cpp
Puzzles/: 01_using.cpp  02_oops.cpp
include/: common.h  make_range.h  parse_arguments.h  safe_printf.h  timer.h  zip_iterator.h
